--- a/namste-react/Lec1/index.html
+++ b/namste-react/Lec1/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Namste React</title>
 </head>
 <body>
+    <h1>Hello</h1>
     <div id="root">
         <h1>Hello World!</h1>
     </div>
@@ -18,5 +20,8 @@
 
         console.log("JS");
     </script>
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="App.js"></script>
 </body>
 </html>
