--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Namste React</title>
 </head>
 <body>
-    <h1>Hello</h1>
     <div id="root">
-        <h1>Hello World!</h1>
+        <h1>Not render</h1>
     </div>
     <script type="module"  src="index.js"></script>
 </body>
