--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Namste React</title>
 </head>
 <body>
-    <div id="root">
+    <div class="main" id="root">
         <h1>Not render</h1>
     </div>
     <script type="module"  src="./src/index.js"></script>
